RHCLOUD-39537: Update attributes Resource in Report Resource (#496)
* RHCLOUD-39537: Update attributes Resource in Report Resource

* revert changes to dockerfile

* update method names to be more accurate

* add newline at eof

* make requested updates to align with design doc

* update protos

* update unit and e2e tests

* update go.mod

* comment out test

* update go.mod

* update go.mod and comment out tests

* update go.mod and comment out tests

* comment out test

* update go.mod and comment out tests

* update go.mod

* comment out test

* comment out authz test

* comment out authz test

* change from resourceRepresentations to representations in middleware

* change from resource_type to type

* Remove json_name for fields where it matches fieldName; Remove unused reporter_data; Make RepresentationMetadata required

* remove generated reporter_data file

* fix references

* fix failing tests

* one more remaining json_name for Resource in ResourceRequest

* make resource required in ReportResourceRequest

* fix terms in middleware validation code

* more references to common_resource_data

* update json schema files for common_representation

* Revert "update json schema files for common_representation"

This reverts commit c9608045fdb7ddbd4a5f6b80df199a45c94f9924.

* change from common_resource_data to common_representation

* update comments in schema.go

* update v1beta2 test data

---------
