# api/kessel/inventory/v1beta2/resource_representations.pb.go
@@ -1,0 +1,197 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.2
+// 	protoc        (unknown)
+// source: kessel/inventory/v1beta2/resource_representations.proto
+
+package v1beta2
+
+import (
+	_ "buf.build/gen/go/bufbuild/protovalidate/protocolbuffers/go/buf/validate"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	structpb "google.golang.org/protobuf/types/known/structpb"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type ResourceRepresentations struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Metadata *RepresentationMetadata `protobuf:"bytes,1,opt,name=metadata,proto3" json:"metadata,omitempty"`
+	Common   *structpb.Struct        `protobuf:"bytes,2,opt,name=common,proto3,oneof" json:"common,omitempty"`
+	Reporter *structpb.Struct        `protobuf:"bytes,3,opt,name=reporter,proto3,oneof" json:"reporter,omitempty"`
+}
+
+func (x *ResourceRepresentations) Reset() {
+	*x = ResourceRepresentations{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_kessel_inventory_v1beta2_resource_representations_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ResourceRepresentations) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ResourceRepresentations) ProtoMessage() {}
+
+func (x *ResourceRepresentations) ProtoReflect() protoreflect.Message {
+	mi := &file_kessel_inventory_v1beta2_resource_representations_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ResourceRepresentations.ProtoReflect.Descriptor instead.
+func (*ResourceRepresentations) Descriptor() ([]byte, []int) {
+	return file_kessel_inventory_v1beta2_resource_representations_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *ResourceRepresentations) GetMetadata() *RepresentationMetadata {
+	if x != nil {
+		return x.Metadata
+	}
+	return nil
+}
+
+func (x *ResourceRepresentations) GetCommon() *structpb.Struct {
+	if x != nil {
+		return x.Common
+	}
+	return nil
+}
+
+func (x *ResourceRepresentations) GetReporter() *structpb.Struct {
+	if x != nil {
+		return x.Reporter
+	}
+	return nil
+}
+
+var File_kessel_inventory_v1beta2_resource_representations_proto protoreflect.FileDescriptor
+
+var file_kessel_inventory_v1beta2_resource_representations_proto_rawDesc = []byte{
+	0x0a, 0x37, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f,
+	0x72, 0x79, 0x2f, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75,
+	0x72, 0x63, 0x65, 0x5f, 0x72, 0x65, 0x70, 0x72, 0x65, 0x73, 0x65, 0x6e, 0x74, 0x61, 0x74, 0x69,
+	0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x18, 0x6b, 0x65, 0x73, 0x73, 0x65,
+	0x6c, 0x2e, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2e, 0x76, 0x31, 0x62, 0x65,
+	0x74, 0x61, 0x32, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x62, 0x75, 0x66, 0x2f, 0x73, 0x74, 0x72, 0x75, 0x63, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x1a, 0x36, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74,
+	0x6f, 0x72, 0x79, 0x2f, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x2f, 0x72, 0x65, 0x70, 0x72,
+	0x65, 0x73, 0x65, 0x6e, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x6d, 0x65, 0x74, 0x61, 0x64,
+	0x61, 0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1b, 0x62, 0x75, 0x66, 0x2f, 0x76,
+	0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2f, 0x76, 0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xf7, 0x01, 0x0a, 0x17, 0x52, 0x65, 0x73, 0x6f, 0x75,
+	0x72, 0x63, 0x65, 0x52, 0x65, 0x70, 0x72, 0x65, 0x73, 0x65, 0x6e, 0x74, 0x61, 0x74, 0x69, 0x6f,
+	0x6e, 0x73, 0x12, 0x54, 0x0a, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x30, 0x2e, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2e, 0x69, 0x6e,
+	0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2e, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x2e,
+	0x52, 0x65, 0x70, 0x72, 0x65, 0x73, 0x65, 0x6e, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x4d, 0x65,
+	0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x42, 0x06, 0xba, 0x48, 0x03, 0xc8, 0x01, 0x01, 0x52, 0x08,
+	0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x12, 0x34, 0x0a, 0x06, 0x63, 0x6f, 0x6d, 0x6d,
+	0x6f, 0x6e, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x17, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x53, 0x74, 0x72, 0x75, 0x63,
+	0x74, 0x48, 0x00, 0x52, 0x06, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x88, 0x01, 0x01, 0x12, 0x38,
+	0x0a, 0x08, 0x72, 0x65, 0x70, 0x6f, 0x72, 0x74, 0x65, 0x72, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b,
+	0x32, 0x17, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62,
+	0x75, 0x66, 0x2e, 0x53, 0x74, 0x72, 0x75, 0x63, 0x74, 0x48, 0x01, 0x52, 0x08, 0x72, 0x65, 0x70,
+	0x6f, 0x72, 0x74, 0x65, 0x72, 0x88, 0x01, 0x01, 0x42, 0x09, 0x0a, 0x07, 0x5f, 0x63, 0x6f, 0x6d,
+	0x6d, 0x6f, 0x6e, 0x42, 0x0b, 0x0a, 0x09, 0x5f, 0x72, 0x65, 0x70, 0x6f, 0x72, 0x74, 0x65, 0x72,
+	0x42, 0x72, 0x0a, 0x28, 0x6f, 0x72, 0x67, 0x2e, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x5f,
+	0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x69, 0x6e, 0x76, 0x65, 0x6e,
+	0x74, 0x6f, 0x72, 0x79, 0x2e, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x50, 0x01, 0x5a, 0x44,
+	0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x70, 0x72, 0x6f, 0x6a, 0x65,
+	0x63, 0x74, 0x2d, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74,
+	0x6f, 0x72, 0x79, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x6b, 0x65, 0x73, 0x73,
+	0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2f, 0x76, 0x31, 0x62,
+	0x65, 0x74, 0x61, 0x32, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_kessel_inventory_v1beta2_resource_representations_proto_rawDescOnce sync.Once
+	file_kessel_inventory_v1beta2_resource_representations_proto_rawDescData = file_kessel_inventory_v1beta2_resource_representations_proto_rawDesc
+)
+
+func file_kessel_inventory_v1beta2_resource_representations_proto_rawDescGZIP() []byte {
+	file_kessel_inventory_v1beta2_resource_representations_proto_rawDescOnce.Do(func() {
+		file_kessel_inventory_v1beta2_resource_representations_proto_rawDescData = protoimpl.X.CompressGZIP(file_kessel_inventory_v1beta2_resource_representations_proto_rawDescData)
+	})
+	return file_kessel_inventory_v1beta2_resource_representations_proto_rawDescData
+}
+
+var file_kessel_inventory_v1beta2_resource_representations_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_kessel_inventory_v1beta2_resource_representations_proto_goTypes = []any{
+	(*ResourceRepresentations)(nil), // 0: kessel.inventory.v1beta2.ResourceRepresentations
+	(*RepresentationMetadata)(nil),  // 1: kessel.inventory.v1beta2.RepresentationMetadata
+	(*structpb.Struct)(nil),         // 2: google.protobuf.Struct
+}
+var file_kessel_inventory_v1beta2_resource_representations_proto_depIdxs = []int32{
+	1, // 0: kessel.inventory.v1beta2.ResourceRepresentations.metadata:type_name -> kessel.inventory.v1beta2.RepresentationMetadata
+	2, // 1: kessel.inventory.v1beta2.ResourceRepresentations.common:type_name -> google.protobuf.Struct
+	2, // 2: kessel.inventory.v1beta2.ResourceRepresentations.reporter:type_name -> google.protobuf.Struct
+	3, // [3:3] is the sub-list for method output_type
+	3, // [3:3] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
+}
+
+func init() { file_kessel_inventory_v1beta2_resource_representations_proto_init() }
+func file_kessel_inventory_v1beta2_resource_representations_proto_init() {
+	if File_kessel_inventory_v1beta2_resource_representations_proto != nil {
+		return
+	}
+	file_kessel_inventory_v1beta2_representation_metadata_proto_init()
+	if !protoimpl.UnsafeEnabled {
+		file_kessel_inventory_v1beta2_resource_representations_proto_msgTypes[0].Exporter = func(v any, i int) any {
+			switch v := v.(*ResourceRepresentations); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	file_kessel_inventory_v1beta2_resource_representations_proto_msgTypes[0].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_kessel_inventory_v1beta2_resource_representations_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_kessel_inventory_v1beta2_resource_representations_proto_goTypes,
+		DependencyIndexes: file_kessel_inventory_v1beta2_resource_representations_proto_depIdxs,
+		MessageInfos:      file_kessel_inventory_v1beta2_resource_representations_proto_msgTypes,
+	}.Build()
+	File_kessel_inventory_v1beta2_resource_representations_proto = out.File
+	file_kessel_inventory_v1beta2_resource_representations_proto_rawDesc = nil
+	file_kessel_inventory_v1beta2_resource_representations_proto_goTypes = nil
+	file_kessel_inventory_v1beta2_resource_representations_proto_depIdxs = nil
+}
