# openapi.yaml
@@ -1345,23 +1345,6 @@ components:
         kessel.inventory.v1beta2.ReportResourceResponse:
             type: object
             properties: {}
-        kessel.inventory.v1beta2.ReporterData:
-            type: object
-            properties:
-                reporterType:
-                    type: string
-                reporterInstanceId:
-                    type: string
-                reporterVersion:
-                    type: string
-                localResourceId:
-                    type: string
-                apiHref:
-                    type: string
-                consoleHref:
-                    type: string
-                resourceData:
-                    type: object
         kessel.inventory.v1beta2.ReporterReference:
             type: object
             properties:
@@ -1369,17 +1352,30 @@ components:
                     type: string
                 instanceId:
                     type: string
+        kessel.inventory.v1beta2.RepresentationMetadata:
+            type: object
+            properties:
+                localResourceId:
+                    type: string
+                apiHref:
+                    type: string
+                consoleHref:
+                    type: string
+                reporterVersion:
+                    type: string
         kessel.inventory.v1beta2.Resource:
             type: object
             properties:
                 inventoryId:
                     type: string
-                resourceType:
+                type:
                     type: string
-                reporterData:
-                    $ref: '#/components/schemas/kessel.inventory.v1beta2.ReporterData'
-                commonResourceData:
-                    type: object
+                reporterType:
+                    type: string
+                reporterInstanceId:
+                    type: string
+                representations:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta2.ResourceRepresentations'
         kessel.inventory.v1beta2.ResourceReference:
             type: object
             properties:
@@ -1389,6 +1385,15 @@ components:
                     type: string
                 reporter:
                     $ref: '#/components/schemas/kessel.inventory.v1beta2.ReporterReference'
+        kessel.inventory.v1beta2.ResourceRepresentations:
+            type: object
+            properties:
+                metadata:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta2.RepresentationMetadata'
+                common:
+                    type: object
+                reporter:
+                    type: object
         kessel.inventory.v1beta2.ResponsePagination:
             type: object
             properties:
